# toorpia

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: api-reference.md  map-inspector.md  releasing.md  troubleshooting.md
docs/release-notes/: v1.2.0_jp.md  v1.3.0_jp.md
mcp/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mcp/examples/: claude-desktop-config.json
mcp/src/: README.md  api.ts  errors.ts  index.ts  preview.ts  server.ts  summary.ts  types.ts
mcp/src/client/: toorpia.ts
mcp/src/prompts/: workflow_csv.ts  workflow_wav.ts
mcp/src/tools/: common.ts  csv.ts  wav.ts
mcp/testdata/: .gitkeep  embedding_addplot_sample.csv  embedding_sample.csv  sensor_log.csv
samples/: test_addplot_csvform.py  test_addplot_feature_api.py  test_addplot_history.py  test_basemap_csv.py  test_basemap_csvform.py  test_basemap_embedding.py  test_diagnostic_score_per_point.py  test_fit_transform_csvform.py  test_identna_detabn_api.py  test_toorpia_api.ipynb  test_toorpia_api.py
test/: test_client.py
toorpia/: __init__.py  client.py  config.py  job.py
toorpia/toorpia_utils/: authentication.py
