[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toorpia"
version = "1.3.0"
description = "Python client for the toorPIA API — mapping and anomaly detection for CSV, waveform, and embedding data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "toor Inc.", email = "takaeda@toor.jpn.com" },
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "requests>=2.22.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/toorpia/toorpia"
Documentation = "https://github.com/toorpia/toorpia/blob/main/docs/api-reference.md"
"Release Notes" = "https://github.com/toorpia/toorpia/releases"
Issues = "https://github.com/toorpia/toorpia/issues"

[tool.setuptools.packages.find]
include = ["toorpia*"]
